--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -6,6 +6,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'  # Push events to tags matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
@@ -58,8 +60,9 @@ jobs:
     name: >-
       Sign the Python 🐍 distribution 📦 with Sigstore
       and upload them to GitHub Release
+    if: startsWith(github.ref, 'refs/tags/')  # run on tag pushes
     needs:
-    - publish-to-pypi
+    - publish-to-pypi  # Changed back to depend on publish-to-pypi since both run on tag pushes
     runs-on: ubuntu-latest
 
     permissions:
@@ -85,7 +88,7 @@ jobs:
         gh release create
         '${{ github.ref_name }}'
         --repo '${{ github.repository }}'
-        --notes ""
+        --generate-notes
     - name: Upload artifact signatures to GitHub Release
       env:
         GITHUB_TOKEN: ${{ github.token }}
@@ -99,6 +102,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'  # only publish to TestPyPI on push to main
     needs:
     - build
     runs-on: ubuntu-latest
