--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [build-system]
 requires = [
-	 "setuptools>=42",
-	 "wheel"
+    "setuptools>=42",
+    "wheel",
+    "setuptools_scm[toml]>=6.2"
 ]
 build-backend = "setuptools.build_meta"
 
-
+[tool.setuptools_scm]
+local_scheme = "no-local-version"
