--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -12,9 +12,9 @@ build:
     - openjdk-11-jre
     - openjdk-11-jdk
     - graphviz
-  jobs:
-    pre_install:
-      - ./gradle_install.sh
+  # jobs:
+    # pre_install:
+      # - ./gradle_install.sh
    # - ./build_jars.sh
   tools:
     python: "mambaforge-22.9"
